--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
         const root = document.getElementById('root');
         root.appendChild(heading);
     </script> -->
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <!--Now, we have injected React in our code-->
+    <!--
+        <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+        <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+        Now, we have injected React in our code
+    -->
 
-    <script src="./App.js"></script>
+    <script src="./App.js" type="module"></script>
 </body>
 </html>
